--- a/app/src/main/res/layout/my_text_view.xml
+++ b/app/src/main/res/layout/my_text_view.xml
@@ -4,15 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/FrameLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="100sp">
+
+    <androidx.constraintlayout.widget.Barrier
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#000000"
+        app:barrierDirection="top" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="80dp"
         android:visibility="visible"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="16dp"
+        tools:text="Blablabla"
         tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/textContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="80dp"
+        android:layout_marginVertical="35dp"
+        tools:text="BloBlo" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#000000"
+        app:barrierDirection="bottom" />
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapViewIncident"
+        android:layout_width="60dp"
+        android:layout_height="76dp"
+        android:background="@color/black"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="10dp" />
 
 </FrameLayout>
